# faiss-wheels

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  NOTICE  README.md  config.sh  config_env_vars.sh  env_vars.sh  pyproject.toml  secret.txt.enc  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_windows_arm64.yml
cmake/: default_config.cmake
conf/: cuda10.0.sh  cuda7.5.sh  cuda8.0.sh  cuda9.0.sh
patch/: faiss-fix-omp-loop-signed-index.patch  faiss-remove-lapack.patch  faiss-rename-swigfaiss.patch  rename-swigfaiss.patch
python/: CMakeLists.txt
scripts/: build_Linux.sh  build_Windows.sh  build_Windows_ARM64.sh  build_macOS.sh  install_Linux.sh  install_Windows.ps1  install_macOS.sh  rename_project.sh
tests/: test_faiss.py
